fix(core): use overflow wrap for notification content (#5944)

--- a/projects/core/components/notification/notification.style.less
+++ b/projects/core/components/notification/notification.style.less
@@ -79,7 +79,7 @@
 
 .t-content {
     flex: 1;
-    overflow: hidden;
     word-wrap: break-word;
+    overflow-wrap: anywhere;
     color: var(--tui-text-01);
 }
